RESOLVED FIXED171297
REGRESSION(206450): WebKit2PlatformMouseEvent m_modifierFlags not set
https://bugs.webkit.org/show_bug.cgi?id=171297
Summary REGRESSION(206450): WebKit2PlatformMouseEvent m_modifierFlags not set
Alex Christensen
Reported 2017-04-25 16:25:38 PDT
REGRESSION(206450): WebKit2PlatformMouseEvent m_modifierFlags not set
Attachments
Patch (1.46 KB, patch)
2017-04-25 16:26 PDT, Alex Christensen
no flags
Archive of layout-test-results from ews102 for mac-elcapitan (1.07 MB, application/zip)
2017-04-25 17:41 PDT, Build Bot
no flags
Patch (11.89 KB, patch)
2017-04-25 18:30 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2017-04-25 16:26:08 PDT
Geoffrey Garen
Comment 2 2017-04-25 16:36:45 PDT
Comment on attachment 308163 [details] Patch r=me
Geoffrey Garen
Comment 3 2017-04-25 16:37:50 PDT
Can we test this by exercising the WK2 API in WebKitTestRunner?
Build Bot
Comment 4 2017-04-25 17:41:56 PDT
Comment on attachment 308163 [details] Patch Attachment 308163 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/3605679 New failing tests: webrtc/datachannel/basic.html
Build Bot
Comment 5 2017-04-25 17:41:58 PDT
Created attachment 308175 [details] Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Alex Christensen
Comment 6 2017-04-25 18:30:20 PDT
Alex Christensen
Comment 7 2017-04-25 18:30:53 PDT
There we go. I added an API test that failed before and passes now. No more regressions!
Alex Christensen
Comment 8 2017-04-25 21:28:18 PDT
Note You need to log in before you can comment on or make changes to this bug.