Tools/TestWebKitAPI/mac/PlatformWebViewMac.mm
@@ -177,22 +177,6 @@ void PlatformWebView::simulateRightClick(unsigned x, unsigned y)
     [m_view rightMouseUp:event];
 
 }
-    
-void PlatformWebView::simulateMouseMove(unsigned x, unsigned y)
-{   
-    NSEvent *event = [NSEvent mouseEventWithType:NSEventTypeMouseMoved
-                               location:NSMakePoint(x, y)
-                          modifierFlags:0
-                              timestamp:GetCurrentEventTime()
-                           windowNumber:[m_window windowNumber]
-                                context:[NSGraphicsContext currentContext]
-                            eventNumber:0
-                             clickCount:0
-                               pressure:0];
-    
-    [m_view mouseMoved:event];
-    
-}
 
 static NSEventType eventTypeForButton(WKEventMouseButton button)
 {
@@ -226,7 +210,13 @@ static NSEventModifierFlags modifierFlagsForWKModifiers(WKEventModifiers modifie
 
     return returnVal;
 }
-    
+
+void PlatformWebView::simulateMouseMove(unsigned x, unsigned y, WKEventModifiers modifiers)
+{
+    NSEvent *event = [NSEvent mouseEventWithType:NSEventTypeMouseMoved location:NSMakePoint(x, y) modifierFlags:modifierFlagsForWKModifiers(modifiers) timestamp:GetCurrentEventTime() windowNumber:[m_window windowNumber] context:[NSGraphicsContext currentContext] eventNumber:0 clickCount:0 pressure:0];
+    [m_view mouseMoved:event];
+}
+
 void PlatformWebView::simulateButtonClick(WKEventMouseButton button, unsigned x, unsigned y, WKEventModifiers modifiers)
 {
     NSEvent *event = [NSEvent mouseEventWithType:eventTypeForButton(button)
